Fix:inpsiration button group misalignment. Add light gray bg

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -37,6 +37,7 @@
 body,
 input,
 button,
+select,
 textarea {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 1rem;
@@ -70,6 +71,7 @@ html {
 body {
   margin: 0;
   padding: 0;
+  background: #f9f9f9;
 }
 
 img {
@@ -180,8 +182,7 @@ li > code {
   padding: 0.25em;
   color: var(--color);
   font-weight: 700;
-  font-size: 0.75rem;
-  transition: color 0.4s;
+  font-size: 0.8rem;
 }
 
 .nav__item:hover {
@@ -192,7 +193,7 @@ li > code {
   display: none;
 }
 
-@media (min-width: 700px) {
+@media (min-width: 800px) {
   .nav {
     position: fixed;
     left: 0;
@@ -228,7 +229,7 @@ li > code {
   margin-top: 0;
 }
 
-@media (min-width: 700px) {
+@media (min-width: 800px) {
   .post,
   .page {
     margin-left: var(--nav-width);
